# BlockChainServer

./: BLOCK_T&Globals.cpp  BLOCK_T&Globals.h  README.md  kill_dockers.sh  mtacoin.sh
miner/: BLOCK_T&Globals.cpp  BLOCK_T&Globals.h  CMakeLists.txt  Dockerfile  Miner.cpp  Miner.h  main.cpp
server/: BLOCK_T&Globals.cpp  BLOCK_T&Globals.h  CMakeLists.txt  Dockerfile  Server.cpp  Server.h  main.cpp
